# IRLS_GPU

./: CMakeLists.txt  README.md  run_me.py
cmake/Modules/: FindMAGMA.cmake  FindOpenBLAS.cmake
src/: L1_by_gpu.cpp  L1_min.hpp  gpu_kernel.cu  main.cpp
